--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -42,8 +42,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
+
             android:id="@+id/lay1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +58,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_marginVertical="12dp"
             android:id="@+id/lay2"
             app:endIconMode="password_toggle"
             app:layout_constraintTop_toBottomOf="@id/lay1"
@@ -86,9 +85,21 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:cornerRadius="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/forgotPasswordET"
             app:layout_constraintStart_toStartOf="parent"
             />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="Forgot password?"
+            android:id="@+id/forgotPasswordET"
+            android:textColor="@color/text_grey"
+            android:backgroundTint="@color/text_grey"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:clickable="false"
+            android:focusable="false"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
