--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".MovieActivity"
+    tools:context=".Activity.MovieActivity"
     android:background="@color/black">
     <LinearLayout
         android:layout_width="match_parent"
