create movie details activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="yello_theme">#FCC434</color>
     <color name="text_grey">#B3B3B3</color>
+    <color name="lightGrey">#575757</color>
+    <color name="duskYellow">#FCC434</color>
 </resources>
