--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -19,8 +19,8 @@
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
-                    android:layout_height="236dp"
-                    android:scaleType="fitStart"
+                    android:layout_height="240dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/bh_sample"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -286,7 +286,7 @@
                     app:trimCollapsedText="@string/see_more"
                     app:trimExpandedText="@string/see_less"
                     app:trimLines="3"
-                    app:trimMode="trimModeLine" />
+                    app:trimMode="trimModeLine"/>
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
@@ -305,6 +305,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:clipToPadding="false"
+                    android:paddingRight="16dp"
                     app:layout_constraintTop_toBottomOf="@id/textView4"/>
                 <TextView
                     android:id="@+id/textView5"
@@ -324,6 +326,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:clipToPadding="false"
+                    android:paddingRight="16dp"
                     app:layout_constraintTop_toBottomOf="@id/textView5"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
@@ -345,4 +349,10 @@
         android:textStyle="bold"
         android:letterSpacing="0.06"
         android:textSize="16dp"/>
+    <ImageView
+        android:id="@+id/backBtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/arrow_left"
+        android:layout_margin="16dp"/>
 </RelativeLayout>
