--- a/app/src/main/res/layout/up_coming_item.xml
+++ b/app/src/main/res/layout/up_coming_item.xml
@@ -76,9 +76,10 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center"
-                android:background="@drawable/bh_clock"
+                android:background="@drawable/clock"
                 android:layout_marginRight="5dp"
                 android:padding="5dp" />
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
