--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="text_grey">#B3B3B3</color>
     <color name="lightGrey">#575757</color>
     <color name="duskYellow">#FCC434</color>
+    <color name="date_black">#1D1D1D</color>
+    <color name="date_grey">#2F2F2F</color>
+    <color name="date_white">#F2F2F2</color>
+    <color name="card_date_black">#161616</color>
+    <color name="bh_text_white">#F2F2F2</color>
+    <color name="bh_text_hint">#5C5C5C</color>
 </resources>
