--- a/app/src/main/res/layout/activity_select_showtime.xml
+++ b/app/src/main/res/layout/activity_select_showtime.xml
@@ -25,6 +25,7 @@
             tools:ignore="MissingConstraints">
 
             <ImageView
+                android:id="@+id/iv_back"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
@@ -87,7 +88,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btn"
+        android:id="@+id/btn_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
