create payment activity

--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -76,7 +76,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center"
-                android:background="@drawable/clock"
+                android:background="@drawable/bh_clock"
                 android:layout_marginRight="5dp"
                 android:padding="5dp" />
         </LinearLayout>
