--- a/app/src/main/res/layout/activity_select_food.xml
+++ b/app/src/main/res/layout/activity_select_food.xml
@@ -49,6 +49,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <ListView
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none"
