--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="bg_enabled_btn">#FCC434</color>
     <color name="txt_disabled_btn">#5C5C5C</color>
     <color name="txt_enabled_btn">#000000</color>
+    <color name="payment_selected">#261D08</color>
 </resources>
