--- a/app/src/main/res/layout/activity_my_ticket.xml
+++ b/app/src/main/res/layout/activity_my_ticket.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Tickets"
+                android:text="My Ticket"
                 android:textSize="24sp"
                 android:textColor="@color/white"
                 android:layout_gravity="center"
