--- a/app/src/main/res/layout/celeb_view.xml
+++ b/app/src/main/res/layout/celeb_view.xml
@@ -9,6 +9,7 @@
     android:id="@+id/fullLayout"
     android:layout_marginLeft="16dp">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
