--- a/app/src/main/res/drawable/round_close_24.xml
+++ b/app/src/main/res/drawable/round_close_24.xml
@@ -1,17 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="800dp"
-    android:height="800dp"
-    android:viewportWidth="28.8"
-    android:viewportHeight="28.8">
-  <path
-      android:pathData="M14.4,-9.6m-10,-0a10,10 0,1 0,20 -0a10,10 0,1 0,-20 -0"
-      android:strokeWidth="2.16"
-      android:fillColor="#00000000"
-      android:strokeColor="#F2F2F2"/>
-  <path
-      android:pathData="M16.9,-7.1L11.9,-12.1M11.9,-7.1L16.9,-12.1"
-      android:strokeWidth="2.16"
-      android:fillColor="#00000000"
-      android:strokeColor="#F2F2F2"
-      android:strokeLineCap="round"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#F2F2F2" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+      
+    <path android:fillColor="@android:color/white" android:pathData="M18.3,5.71c-0.39,-0.39 -1.02,-0.39 -1.41,0L12,10.59 7.11,5.7c-0.39,-0.39 -1.02,-0.39 -1.41,0 -0.39,0.39 -0.39,1.02 0,1.41L10.59,12 5.7,16.89c-0.39,0.39 -0.39,1.02 0,1.41 0.39,0.39 1.02,0.39 1.41,0L12,13.41l4.89,4.89c0.39,0.39 1.02,0.39 1.41,0 0.39,-0.39 0.39,-1.02 0,-1.41L13.41,12l4.89,-4.89c0.38,-0.38 0.38,-1.02 0,-1.4z"/>
+    
 </vector>
