--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -42,11 +42,11 @@
 
                         <TextView
                             android:id="@+id/movieName"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
+                            android:layout_marginHorizontal="20dp"
+                            app:flow_wrapMode="aligned"
                             android:layout_marginTop="8dp"
-                            android:text=""
                             android:textColor="#F2F2F2"
                             android:textSize="20sp"
                             android:textStyle="bold"
@@ -272,7 +272,7 @@
                     android:letterSpacing="0.02"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-                <com.borjabravo.readmoretextview.ReadMoreTextView
+                <TextView
                     android:id="@+id/readMoreTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -280,16 +280,11 @@
                     android:letterSpacing="0.02"
                     android:lineSpacingExtra="8sp"
                     android:paddingHorizontal="14dp"
-                    android:text="@string/sample_storyline"
                     android:textColor="#F2F2F2"
                     android:textSize="14sp"
-                    app:colorClickableText="@color/yello_theme"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    app:trimCollapsedText="@string/see_more"
-                    app:trimExpandedText="@string/see_less"
-                    app:trimLines="3"
-                    app:trimMode="trimModeLine"/>
+                    />
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
