--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -12,10 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:visibility="invisible"
                 android:id="@+id/welcomeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -27,8 +29,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
                 android:textColor="@color/bh_text_white"/>
-
             <TextView
+                android:visibility="invisible"
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -42,6 +44,41 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/loginLayout"
+                android:layout_marginLeft="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/imageView9">
+
+                <TextView
+                    android:layout_marginRight="4dp"
+                    android:id="@+id/login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/sfpro_medium"
+                    android:text="Login"
+                    android:textColor="@color/duskYellow"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView14"
+                    app:layout_constraintRight_toLeftOf="@id/imageView14"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:layout_marginTop="3dp"
+                    android:id="@+id/imageView14"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/login"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="34dp"
@@ -75,11 +112,63 @@
                 app:queryHint="Search..."
                 app:searchIcon="@drawable/akar_icons_search"
                 android:layout_marginTop="16dp"/>
+
+            <TextView
+                android:id="@+id/notfound"
+                android:visibility="gone"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/sfproregular"
+                android:text="Not found..."
+                android:textAlignment="center"
+                android:textSize="16dp"
+                android:textStyle="italic"
+                app:layout_constraintTop_toBottomOf="@+id/searchview" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="gone"
+                android:id="@+id/searched_movie"
+                android:layout_marginTop="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/searchview">
+                <com.google.android.material.card.MaterialCardView
+                    app:cardCornerRadius="16dp"
+                    android:id="@+id/materialCardView"
+                    android:layout_width="144dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:strokeWidth="0dp">
+
+                    <ImageView
+                        android:id="@+id/searched_poster"
+                        android:layout_width="144dp"
+                        android:layout_height="190dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img_1" />
+                </com.google.android.material.card.MaterialCardView>
+
+                <TextView
+                    android:id="@+id/searched_name"
+                    android:layout_width="144dp"
+                    android:layout_height="wrap_content"
+                    android:text="Án mạng lầu Bốn"
+                    android:textColor="@color/bh_text_white"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/sfpro_medium"
+                    app:layout_constraintEnd_toEndOf="@+id/materialCardView"
+                    app:layout_constraintStart_toStartOf="@+id/materialCardView"
+                    app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <ScrollView
             android:layout_marginTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -151,7 +240,7 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/sfpro_medium"
-                    android:text="Now Playing"
+                    android:text="Coming Soon"
                     android:textColor="@color/bh_text_white"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -213,9 +302,9 @@
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="16dp"
                     android:src="@drawable/bh_arrow_right_yellow"
-                    app:layout_constraintBottom_toBottomOf="@+id/promo"
+                    app:layout_constraintBottom_toBottomOf="@+id/seeallpromo"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/promo" />
+                    app:layout_constraintTop_toTopOf="@+id/seeallpromo" />
                 <TextView
                     android:id="@+id/seeallpromo"
                     android:layout_width="wrap_content"
