--- a/app/src/main/res/drawable/line.xml
+++ b/app/src/main/res/drawable/line.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
     <stroke
-        android:width="1dp"
-        android:color="@color/text_grey"/> <!-- Color of the line -->
+        android:width="0.1dp"
+        android:color="#C0C0C0"/> <!-- Color of the line -->
 </shape>
