--- a/app/src/main/res/drawable/tab_color_selector.xml
+++ b/app/src/main/res/drawable/tab_color_selector.xml
@@ -5,5 +5,5 @@
      android:state_selected="true"
 
      />
-        <item android:drawable="@color/black"/>
+        <item android:drawable="@color/card_bg"/>
 </selector>
