--- a/app/src/main/res/layout/list_item_ticket.xml
+++ b/app/src/main/res/layout/list_item_ticket.xml
@@ -9,25 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="16dp"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/card_bg"
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
             <ImageView
                 android:id="@+id/ivMovieImage"
-                android:layout_width="150dp"
-                android:layout_height="180dp"
+                android:layout_width="100dp"
+                android:layout_height="120dp"
                 android:scaleType="centerCrop"
                 >
             </ImageView>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="12dp"
+                android:padding="4dp"
                 android:gravity="center_vertical"
                 >
                 <TextView
@@ -36,9 +36,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Movie Title"
-                    android:textSize="24sp"
+                    android:textSize="16sp"
                     android:textColor="@color/white"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="4dp"
                     />
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -59,6 +59,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Movive Time"
+                        android:textSize="12sp"
                         android:textColor="@color/white"
                         />
                     <TextView
@@ -66,6 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
+                        android:textSize="12sp"
                         android:text="Moive date"
                         android:textColor="@color/white"
                         />
@@ -89,6 +91,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
+                        android:textSize="12sp"
                         android:text="Movie Location"
                         android:textColor="@color/white"/>
                 </LinearLayout>
