--- a/app/src/main/res/layout/now_playing_item.xml
+++ b/app/src/main/res/layout/now_playing_item.xml
@@ -1,94 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    app:cardCornerRadius="15dp">
-    <LinearLayout
+    android:background="@color/black"
+    android:padding="12dp">
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/black"
-        android:gravity="center_horizontal"
-        android:paddingBottom="4dp"
-        >
-        <androidx.cardview.widget.CardView
+        android:backgroundTint="@color/card_bg"
+        app:cardCornerRadius="12dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:backgroundTint="@color/card_bg"
+            android:gravity="left"
             >
-            <ImageView
-                android:id="@+id/img"
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                />
-        </androidx.cardview.widget.CardView>
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Avatar 2: The Way of Water"
-            android:textSize="24dp"
-            android:textColor="@color/yello_theme"
-            android:textStyle="bold"
-            android:gravity="center"
-            />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            >
-            <View
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:background="@drawable/movie_star"
-                android:layout_marginRight="5dp"
-                android:padding="5dp" />
+                android:layout_height="180dp"
+                >
+                <ImageView
+                    android:id="@+id/img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/img_1"
+                    />
+            </androidx.cardview.widget.CardView>
             <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Avatar 2: The Way of Water"
+                android:textSize="18dp"
+                android:textColor="@color/yello_theme"
+                android:textStyle="bold"
+                android:gravity="center"
+                />
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4.0"
-                android:textSize="16dp"
-                android:layout_marginRight="5dp"
-                android:textColor="@color/white"
-                />
-            <TextView
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_margin="6dp"
+                >
+
+                <View
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/movie_star"
+                    android:padding="5dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4.0"
+                    android:textSize="16dp"
+                    android:layout_marginRight="5dp"
+                    android:textColor="@color/white"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="(345)"
+                    android:textSize="16dp"
+                    android:textColor="@color/white"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(345)"
-                android:textSize="16dp"
-                android:textColor="@color/white"
-                />
+                android:orientation="horizontal"
+                android:layout_margin="6dp"
+                >
+
+                <View
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/bh_clock"
+                    android:padding="5dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2h10'"
+                    android:textColor="@color/text_grey"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="6dp"
+                android:gravity="center"
+                >
+
+                <View
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginRight="5dp"
+                    android:padding="5dp"
+                    android:background="@drawable/movie_lh" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Movie genres"
+                    android:textColor="@color/text_grey"/>
+            </LinearLayout>
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <View
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:background="@drawable/bh_clock"
-                android:layout_marginRight="5dp"
-                android:padding="5dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
