--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -30,6 +30,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:paddingRight="8dp"
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,7 +49,7 @@
             android:layout_marginTop="6dp"
             android:id="@+id/description"
             android:layout_width="wrap_content"
-            android:maxWidth="250dp"
+            android:maxWidth="200dp"
             android:layout_height="wrap_content"
             android:minHeight="36dp"
             android:gravity="center"
