--- a/app/src/main/res/layout/now_playing_item.xml
+++ b/app/src/main/res/layout/now_playing_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     android:padding="12dp">
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvFilmNow"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/card_bg"
         app:cardCornerRadius="12dp">
         <LinearLayout
@@ -23,7 +24,7 @@
                 android:layout_height="180dp"
                 >
                 <ImageView
-                    android:id="@+id/img"
+                    android:id="@+id/imvPosterNow"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
@@ -31,11 +32,12 @@
                     />
             </androidx.cardview.widget.CardView>
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/tvNameNow"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:text="Avatar 2: The Way of Water"
-                android:textSize="18dp"
+                android:textSize="16dp"
+                android:padding="4dp"
                 android:textColor="@color/yello_theme"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -55,20 +57,22 @@
                     android:layout_marginRight="5dp"
                     android:background="@drawable/movie_star"
                     android:padding="5dp" />
+
                 <TextView
+                    android:id="@+id/tvRatingNow"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="4.0"
-                    android:textSize="16dp"
+                    android:layout_height="match_parent"
                     android:layout_marginRight="5dp"
+                    android:text="4.0"
                     android:textColor="@color/white"
-                    />
+                    android:textSize="16dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="(345)"
                     android:textSize="16dp"
                     android:textColor="@color/white"
+                    android:id="@+id/tvRatingCountNow"
                     />
 
             </LinearLayout>
@@ -108,9 +112,11 @@
                     android:padding="5dp"
                     android:background="@drawable/movie_lh" />
                 <TextView
+                    android:id="@+id/tvGenresNow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Movie genres"
+                    android:maxLines="1"
                     android:textColor="@color/text_grey"/>
             </LinearLayout>
 
