--- a/app/src/main/res/layout/up_coming_item.xml
+++ b/app/src/main/res/layout/up_coming_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     android:padding="12dp">
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvFilmUp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/card_bg"
         app:cardCornerRadius="12dp">
         <LinearLayout
@@ -23,7 +24,7 @@
                 android:layout_height="180dp"
                 >
                 <ImageView
-                    android:id="@+id/img"
+                    android:id="@+id/imvPosterUp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
@@ -31,11 +32,12 @@
                     />
             </androidx.cardview.widget.CardView>
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/tvNameUp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:text="Avatar 2: The Way of Water"
-                android:textSize="18dp"
+                android:textSize="16dp"
+                android:padding="4dp"
                 android:textColor="@color/yello_theme"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -60,6 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="24 May"
+                    android:id="@+id/tvReleaseDateUp"
                     android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
@@ -80,6 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Movie genres"
+                    android:id="@+id/tvGenresUp"
                     android:textColor="@color/text_grey"/>
             </LinearLayout>
 
