--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:padding="10dp"
     tools:context=".Activity.SignUp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,6 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/backLayout">
         <ImageView
+            android:layout_margin="16dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/img_2"
@@ -22,6 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
         <TextView
+            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="28sp"
@@ -32,6 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
@@ -39,54 +41,61 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/backLayout"
         >
+
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/img_3"
+            android:layout_marginLeft="4dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/outline_email_24"
+            app:layout_constraintBottom_toBottomOf="@+id/etEmail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-           />
+            app:layout_constraintTop_toTopOf="@+id/etEmail" />
         <EditText
+            android:textSize="18dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
             android:id="@+id/etEmail"
-            android:textColor="@color/white"
+            android:textColor="@color/bh_text_white"
             android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/bg_disabled_btn"
             android:paddingStart="40dp"
-            android:paddingBottom="30dp"
+            android:paddingBottom="12dp"
             android:layout_marginBottom="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:inputType="textEmailAddress" />
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/profile_lh"
+            android:layout_marginLeft="4dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/outline_account_circle_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/etUserName"
             android:layout_marginTop="8dp"
             />
+
         <EditText
+            android:textSize="18dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/etUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="User name"
-            android:id="@+id/etUserName"
-            android:textColor="@color/white"
             android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
+            android:hint="User name"
+            android:inputType="textPersonName"
             android:paddingStart="40dp"
-            android:paddingBottom="30dp"
-            android:layout_marginBottom="30dp"
+            android:paddingBottom="12dp"
+            android:textColor="@color/bh_text_white"
+            android:textColorHint="@color/bg_disabled_btn"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/etEmail"
-            android:inputType="textPersonName" />
+            app:layout_constraintTop_toBottomOf="@id/etEmail" />
+
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/lock"
+            android:layout_marginLeft="4dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/password"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/etPassword"
             android:layout_marginTop="8dp"
@@ -95,16 +104,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:layout_marginTop="12dp"
             android:id="@+id/etPassword"
-            android:textColor="@color/white"
+            android:textColor="@color/bh_text_white"
             android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/bg_disabled_btn"
             android:paddingStart="40dp"
-            android:paddingBottom="30dp"
+            android:paddingBottom="12dp"
             android:layout_marginBottom="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/etUserName"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textSize="18dp"/>
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
             android:layout_height="56dp"
@@ -114,6 +125,7 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:cornerRadius="24dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etPassword"
             />
@@ -156,6 +168,7 @@
             app:layout_constraintTop_toTopOf="parent"
             />
         <com.google.android.material.button.MaterialButton
+            android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             android:layout_height="56dp"
@@ -165,8 +178,9 @@
             android:textSize="16sp"
             app:cornerRadius="24dp"
             android:layout_marginTop="30dp"
-            />
+            android:textColor="@color/bh_text_white"/>
         <com.google.android.material.button.MaterialButton
+            android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
             app:layout_constraintTop_toBottomOf="@+id/facebookBtn"
             android:layout_height="56dp"
@@ -175,19 +189,20 @@
             android:backgroundTint="#1A1A1A"
             android:textSize="16sp"
             app:cornerRadius="24dp"
-            />
+            android:textColor="@color/bh_text_white"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/by_sign_in_or_sign_up_you_agree_to_our_terms_of_service_and_privac_y_policy"
+            android:textAlignment="center"
             android:textColor="@color/text_grey"
             android:textSize="12sp"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center"
-            app:layout_goneMarginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/googleBtn"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/by_sign_in_or_sign_up_you_agree_to_our_terms_of_service_and_privac_y_policy"
+            app:layout_constraintTop_toBottomOf="@+id/googleBtn"
 
-            />
+            app:layout_goneMarginTop="30dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
